# SampleRegistry

./: .gitignore  Dockerfile  README.md  machine_types.tsv  pyproject.toml  requirements.txt  standard_host_species.tsv  test_metadata_sheet.csv
.github/: dependabot.yml
.github/workflows/: pr.yml  release.yml  test.yml
app/: __init__.py  app.py  db.py
app/sample_registry/: pyproject.toml
app/sample_registry/src/: __init__.py  models.py
app/sample_registry/src/sample_registry/: __init__.py  db.py  illumina.py  mapping.py  models.py  register.py  registrar.py
app/sample_registry/test/: test_db.py  test_illumina.py  test_mapping.py  test_register.py  test_registrar.py  test_util.py
app/static/css/: custom.css
app/static/js/: jquery.dataTables.min.js
app/templates/: base.html  browse_runs.html  browse_tags.html  description.html  export_delim.txt  export_qiime.txt  index.html  show_run.html  show_stats.html  show_tag.html  show_tag_value.html
app/tests/: conftest.py  test_downloads.py  test_tags.py
pythonlib/sample_registry/: register.py
sample_registry/: __init__.py  app.py  db.py  mapping.py  models.py  register.py  registrar.py  standards.py  util.py
sample_registry/data/: __init__.py  standard_host_species.tsv  standard_sample_types.tsv
sample_registry/templates/: archive.html  base.html  browse_runs.html  browse_tags.html  failed_export.html  show_run.html  show_stats.html
tests/: test_api.py  test_mapping.py  test_register.py  test_registrar.py  test_standards.py  test_util.py
